--- a/RethoughtDB.Adapters.Discord/RethoughtDB.Adapters.Discord.csproj
+++ b/RethoughtDB.Adapters.Discord/RethoughtDB.Adapters.Discord.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>netcoreapp2.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Discord.Net.WebSocket" Version="2.0.0-beta"/>
+    </ItemGroup>
+
 </Project>
