--- a/RethoughtDB.Adapters.Discord/RethoughtDB.Adapters.Discord.csproj
+++ b/RethoughtDB.Adapters.Discord/RethoughtDB.Adapters.Discord.csproj
@@ -6,6 +6,11 @@
 
     <ItemGroup>
         <PackageReference Include="Discord.Net.WebSocket" Version="2.0.0-beta"/>
+        <PackageReference Include="Newtonsoft.Json" Version="11.0.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\RethoughtDB.Core\RethoughtDB.Core.csproj"/>
     </ItemGroup>
 
 </Project>
